--- a/Vue-interview/src/7.$attr是为了解决什么问题出现的.md
+++ b/Vue-interview/src/7.$attr是为了解决什么问题出现的.md
@@ -7,3 +7,7 @@ $attrs是为了解决父组件向孙子组件传值的时候，如果props过多
 #### 与provide inject的区别：
 provide inject不是响应式的
 $attrs本质上还是props，是响应式的
+
+#### 参考答案
+$attrs主要作用就是实现批量传递数据。  
+provide/inject更适用应用在插件中，实现跨级传递数据。
